@@ -1,0 +1,9 @@
+class Animals < ActiveRecord::Migration
+  def self.up
+    add_column :animals, :age, :float
+  end
+
+  def self.down
+    drop_column :animals, :age
+  end
+end
