@@ -1,7 +1,6 @@
 dir = File.dirname(__FILE__)
 require File.expand_path("#{dir}/extensions/object")
 require File.expand_path("#{dir}/extensions/active_record/base")
-require File.expand_path("#{dir}/extensions/active_record/has_many_association")
 require File.expand_path("#{dir}/extensions/action_controller/base")
 require File.expand_path("#{dir}/extensions/action_controller/test_response")
 require File.expand_path("#{dir}/extensions/action_view/base")
