@@ -1,1 +1,0 @@
-ActiveRecord::Associations::HasManyAssociation.handle_underscores_for_rspec!
